tests/fixtures/errors/unit_dissect_noelse.z
# E0500: a generic unit's type dissection with no case for the concrete type
# and no else is a compile-time error at the instantiation that has no matching
# arm.
box: unit as {
    t: Any.generic
    only: function {} out StringView is {
        match t case i64 then {
            return "i64"
        }
    }
}

i32box: (box t: i32)

main: function is {
    print "\{i32box.only}"
}
